Fixed navigation resetting bug
Fixed desktop viewport cells not being centered

Search bar doesn't overlap logo anymore

--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -118,6 +118,12 @@
     height: 100%;
 }
 
+li.nav-phone.lang.sk {
+    padding: 2.1vw;
+    padding-bottom: 1.5vw;
+    padding-top: 1.5vw;
+}
+
 .nav-phone .lang .lang-text {
     font-family: 'Century Gothic', 'Futura', 'Didact Gothic', san-serif;
     font-weight: 500;
@@ -188,7 +194,8 @@ body {
 }
 
 .active-nav-btn {
-    background-color: #cccccc !important;
+    background-color: #c00000 !important;
+    transition: 0.5s ease;
 }
 
 .nav-phone .search-input {
@@ -280,15 +287,11 @@ body {
         border-right: 1px solid black;
         width: 100%;
         padding: 1.5vw;
-        font-size: 2.5vw;
+        font-size: 2.3vw;
     }
-    /* Fix This Whenever you have the time! */
-    .nav-elem>div {
-        /*position: absolute;*/
-        /*padding: 1.2vw;*/
-        transform: translateY(50%);
-        font-weight: lighter;
-        /*margin: auto;*/
+    .nav-elem {
+        display: flex;
+        justify-content: center;
     }
     li:last-child {
         border-right: none !important;
